@@ -699,6 +699,7 @@ DRIVERNV(bsktball)      //Basket Ball (04/1987)
                         // Hot and Cold (1978)
                         // Screech (1978)
 DRIVERNV(centauri)      //Centaur (1979)
+DRIVERNV(centaurj)      //Centaur (1979, alternate set)
                         // Topaz (1979)
                         // Skate Board (1980)
 DRIVERNV(brvteam )      //Brave Team (1985)
@@ -788,7 +789,7 @@ DRIVERNV(spctrain)      //Space Train (1987)
 //DRIVERNV(macjungl)    //MAC Jungle (1987)
 DRIVERNV(spcpnthr)      //Space Panther (1988)
 DRIVERNV(mac_1808)      //Unknown MAC game #1808 (19??)
-//DRIVERNV(macjungn)    //New MAC Jungle (1995)
+DRIVERNV(macjungn)      //New MAC Jungle (1995)
 DRIVERNV(nbamac)        //MBA MAC (1996)
 
 // ----------------
@@ -964,6 +965,7 @@ DRIVER  (harl,l13)      //Whitestar: 10/99 Harley Davidson (1.03 Spanish)
 // SLEIC
 // ----------------
 DRIVERNV(bikerace)      // Bike Race (1992)
+DRIVERNV(bikerac2)      // Bike Race (2-ball play, 1992)
 DRIVERNV(sleicpin)      // Pin-Ball (1993)
 DRIVERNV(iomoon)        // Io Moon (1994)
                         // Dona Elvira 2 (1996)
